[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Objects/Item/Item.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.7475, 15.4018 )

[node name="Item" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 100, 100, 100, 1 )
self_modulate = Color( 100, 100, 100, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SelfDestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="ObjectCollision" type="StaticBody2D" parent="."]
editor/display_folded = true
collision_layer = 8
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectCollision"]
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="timeout" from="SelfDestroyTimer" to="." method="_on_SelfDestroyTimer_timeout"]
